--- a/public/quest/index.html
+++ b/public/quest/index.html
@@ -158,7 +158,7 @@
       </a-camera>
 
       <a-entity
-        visible="false"
+        visible="true"
         id="rightHandControls"
         hand-tracking-controls="hand: right;"
         hand-tracking-extras
@@ -330,7 +330,7 @@
 
       const planeEntity = document.createElement("a-plane");
       planeEntity.setAttribute("color", "white");
-      planeEntity.setAttribute("width", "0.1");
+      planeEntity.setAttribute("width", "0.14");
       planeEntity.setAttribute("height", "0.03");
       textEntity.appendChild(planeEntity);
 
